--- a/par-alg-rep/inputs/macros.sty
+++ b/par-alg-rep/inputs/macros.sty
@@ -45,8 +45,8 @@
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 \newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
-\newcommand{\SCon}{\ensuremath{\operatorname{SCon}}}
-\newcommand{\WCon}{\ensuremath{\operatorname{WCon}}}
+\newcommand{\SCon}{\ensuremath{\operatorname{Con_{\mathbf{S}}}}}
+\newcommand{\WCon}{\ensuremath{\operatorname{Con_{\mathbf{W}}}}}
 \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\typ}{\ensuremath{\operatorname{typ}}}
