--- a/par-alg-rep/par-alg-rep.tex
+++ b/par-alg-rep/par-alg-rep.tex
@@ -642,8 +642,8 @@ To summarize, $\A$ is a total algebra iff $\Join \SCon(\A) = 1_A$.
   \item  Either one or both of the algebras in Theorem~\ref{thm:berman-1-18} can be
     taken to be unary.
   \item It follows easily from Theorem~\ref{thm:berman-1-18} that the class
-    $\sL_2$ of lattices isomorphic to strong congruence lattices of finite
-    partial algebras is equal to the class $\sL_3$ of lattices isomorphic to
+    of lattices isomorphic to strong congruence lattices of finite
+    partial algebras is equal to the class of lattices isomorphic to
     congruence lattices of finite partial algebras.
     (This is~\cite[Thm~1.19]{MR2619731}.)
   \end{enumerate}
